[package]
name = "controlled_astar"
version = "0.1.3"
edition = "2021"

[[example]]
name = "example"
path = "examples/example.rs"

[[test]]
name = "unit_node"
path = "tests/unit/node_tests.rs"

[[test]]
name = "unit_pq"
path = "tests/unit/pq_tests.rs"

[[test]]
name = "unit_astar"
path = "tests/unit/astar_tests.rs"
