[package]
name = "controlled_astar"
version = "1.0.1" 
authors = ["Selim Serbes <omnicoder.ceng@gmail.com>"] 
edition = "2021"
description = "A Rust library that provides an enhanced A* pathfinding algorithm with controllable node directions and block statuses, ideal for complex pathfinding scenarios."
license = "MIT"
repository = "https://github.com/selimserbes/controlled-astar" 
documentation = "https://docs.rs/controlled_astar" 
readme = "README.md"
keywords = ["pathfinding", "astar", "algorithm", "grid", "navigation"]
categories = ["algorithms"]

[[example]]
name = "example"
path = "examples/example.rs"

[[test]]
name = "unit_node"
path = "tests/unit/node_tests.rs"

[[test]]
name = "unit_pq"
path = "tests/unit/pq_tests.rs"

[[test]]
name = "unit_astar"
path = "tests/unit/astar_tests.rs"

[[test]]
name = "integration"
path = "tests/integration/tests.rs"
